--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid Exercises</title>
+    <title>CSS Grid Exercises - Display</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -11,15 +11,24 @@
 
         .container {
             display: grid;
-            /* grid-template-columns: 25% 200px 25%;
-            grid-template-rows: 200px 200px;*/
-            grid-template: 300px 200px 100px / 50% 200px 100px;
+            grid-template: 300px 100px 100px / 50% 200px 100px;
         }
 
         .item{
             background: lightskyblue;
             padding: 10px;
             border: 1px solid red;
+        }
+
+        .item:nth-of-type(4){
+            background: blue;
+            overflow: auto;
+            display: grid;
+            grid-template: 50px 50px 50px / 200px 200px 200px;
+        }
+
+        .item .item{
+            background: yellow;
         }
     </style>
 </head>
@@ -28,7 +37,13 @@
         <div class="item">Celda #1</div>
         <div class="item">Celda #2</div>
         <div class="item">Celda #3</div>
-        <div class="item">Celda #4</div>
+        <div class="item">
+            <div class="item">SubCelda #1</div>
+            <div class="item">SubCelda #2</div>
+            <div class="item">SubCelda #3</div>
+            <div class="item">SubCelda #4</div>
+            <div class="item">SubCelda #5</div>
+        </div>
         <div class="item">Celda #5</div>
         <div class="item">Celda #6</div>
         <div class="item">Celda #7</div>
