--- a/aling-items.html
+++ b/aling-items.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid Exercises - Aling Content</title>
+    <title>CSS Grid Exercises - Aling Items</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -11,16 +11,25 @@
 
         .container {
             display: grid;
-            grid-template-columns: repeat(3, 200px);
-            grid-template-rows: repeat(4, 100px);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(4, 1fr);
             height: 100vh;
             gap: 5px;
-            justify-content: center;
+            
+            /*justify-items: start end center strecth;
+            align-items: start end center strecth;*/
+            justify-items: center;
+            align-items: center;
         }
 
         .item{
             background: lightskyblue;
             border: 1px solid red;
+        }        
+
+        .item:nth-of-type(5){
+            align-self: start;
+            justify-self: start;
         }
     </style>
 </head>
